fix format of main playbook
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -1,6 +1,7 @@
 ---
 - name: Configure uni-links
   hosts: uni-links
+  roles:
     - { role: origin-certs,      tags: origin-certs }
     - { role: uni-links-handler, tags: uni-links-handler }
     - { role: threatstack,       tags: threatstack }
