--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -4,4 +4,5 @@
   roles:
     - { role: origin-certs,      tags: origin-certs }
     - { role: uni-links-handler, tags: uni-links-handler }
+    - { role: open-ports,        tags: open-ports }
     - { role: threatstack,       tags: threatstack }
