configure Nginx proxy using nginx role
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/ansible/main.yml
+++ b/ansible/main.yml
@@ -4,5 +4,6 @@
   roles:
     - { role: origin-certs,      tags: origin-certs }
     - { role: uni-links-handler, tags: uni-links-handler }
+    - { role: nginx,             tags: nginx }
     - { role: open-ports,        tags: open-ports }
     - { role: threatstack,       tags: threatstack }
