--- a/ansible/group_vars/uni-links.yml
+++ b/ansible/group_vars/uni-links.yml
@@ -1,6 +1,37 @@
 ---
+# Universal Links Handler
+uni_links_domain_name: 'join.status.im'
+uni_links_cont_port: 8092
+
 # Open Nginx Ports
 open_ports_default_comment: 'HTTP & HTTPS'
 open_ports_list:
   - { port: 80, protocol: 'tcp' }
   - { port: 443, protocol: 'tcp' }
+
+# Nginx SSL Proxy configuration
+nginx_sites:
+  uni_links_http:
+    - listen 80
+    - server_name {{ uni_links_domain_name | mandatory }}
+    - return 301 https://$host$request_uri
+
+  uni_links_https:
+    - listen 443 default_server ssl
+    - server_name {{ uni_links_domain_name | mandatory }}
+
+    # Origin certs for CloudFlare SSL proxy
+    - ssl_certificate     /certs/origin.crt
+    - ssl_certificate_key /certs/origin.key
+
+    # prevent clickjacking
+    - proxy_set_header X-Frame-Options sameorigin
+
+    - location / {
+       proxy_pass http://127.0.0.1:{{ uni_links_cont_port }};
+       proxy_set_header Host $host;
+       proxy_set_header X-Real-IP $remote_addr;
+       proxy_set_header X-Forwarded-Proto $scheme;
+       proxy_set_header X-Forwarded-Host $host;
+       proxy_set_header X-Forwarded-Port $server_port;
+     }
