uni-links-handler: convert to using Docker Compose
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/ansible/roles/uni-links-handler/tasks/main.yml
+++ b/ansible/roles/uni-links-handler/tasks/main.yml
@@ -1,29 +1,3 @@
 ---
-- name: Start handler container
-  docker_container:
-    pull:     true
-    name:     '{{ uni_links_cont_name }}'
-    image:    '{{ uni_links_cont_image }}'
-    state:    '{{ cont_state }}'
-    recreate: '{{ cont_recreate }}'
-    restart:  '{{ cont_restart }}'
-    restart_policy: always
-    labels:
-      # enable automatic container updates
-      com.centurylinklabs.watchtower.enable: 'true' 
-    ports:
-      - '127.0.0.1:{{ uni_links_cont_port }}:3000'
-
-- name: Consul service definition
-  include_role: name=consul-service
-  vars:
-    consul_config_name: '{{ uni_links_cont_name }}'
-    consul_services:
-      - id: '{{ uni_links_cont_name }}'
-        name: '{{ uni_links_cont_name }}'
-        port: '{{ uni_links_cont_port }}'
-        tags: ['{{ env }}.{{ stage }}', 'uni-links-handler']
-        checks:
-          - id: '{{ uni_links_cont_name }}-health'
-            type: http
-            http: 'http://localhost:{{ uni_links_cont_port }}/health'
+- import_tasks: container.yml
+- import_tasks: consul.yml
