--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,13 +1,15 @@
 ---
+# Root password
+bootstrap__root_pass: '{{lookup("passwordstore", "hosts/admin-pass")}}'
+# Consul encryption key
+bootstrap__consul_encryption_key: '{{lookup("passwordstore", "services/consul/encryption-key")}}'
+
 # CloudFlare Origin certificates
 origin_certs:
   - domain: 'status.im'
     crt: '{{lookup("passwordstore", "cloud/Cloudflare/status.im/origin.crt returnall=true")}}'
     key: '{{lookup("passwordstore", "cloud/Cloudflare/status.im/origin.key returnall=true")}}'
     default: true
-
-# Root password
-bootstrap__root_pass: '{{lookup("passwordstore", "hosts/admin-pass")}}'
 
 # Consul Encryption
 consul_encryption_key: '{{lookup("passwordstore", "services/consul/encryption-key")}}'
