ansible: add versioncheck.py script to verify role versions
This was originally introduced to `infra-nimbus` and proved robust

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/ansible/requirements.yml
+++ b/ansible/requirements.yml
@@ -1,32 +1,40 @@
 ---
 - name: nginx
   src: git@github.com:status-im/ansible-role-nginx.git
+  version: 3043c998cbc92a634a71dc48363b3e2525696d26
   scm: git
 
 - name: origin-certs
   src: git@github.com:status-im/infra-role-origin-certs.git
-  scm: git
-
-- name: open-ports
-  src: git@github.com:status-im/infra-role-open-ports.git
+  version: 71c3cca0f250f86754d54ec74ddaddbc34f81ebb
   scm: git
 
 - name: infra-role-tinc
   src: git@github.com:status-im/infra-role-tinc.git
+  version: bca648485def8e7a34ed5403bbaf403a2537279a
   scm: git
 
 - name: infra-role-bootstrap
   src: git@github.com:status-im/infra-role-bootstrap.git
+  version: 244ed6a740d6c20250024de9ae1a0232d71b1f57
   scm: git
 
 - name: consul-service
   src: git@github.com:status-im/infra-role-consul-service.git
-  scm: git
-
-- name: threatstack
-  src: git@github.com:status-im/infra-role-threatstack.git
+  version: b1d5ad5caa7d7a036fd175292fa497175bb7c54c
   scm: git
 
 - name: swap-file
   src: git@github.com:status-im/infra-role-swap-file.git
+  version: 7b63fb7b5f0c525aa191e1a410fd79f7eab8d11a
+  scm: git
+
+- name: open-ports
+  src: git@github.com:status-im/infra-role-open-ports.git
+  version: 54125c7d291289aaea51ca313fc694d057d803fa
+  scm: git
+
+- name: threatstack
+  src: git@github.com:status-im/infra-role-threatstack.git
+  version: 552e60c1ab862ac8c73d4c9cba58e7f6f2261fdd
   scm: git
