--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,11 +1,13 @@
 ---
 # Root password
 bootstrap__root_pass: '{{lookup("bitwarden", "root-pass")}}'
-# Consul encryption key and ACL token
+# Consul
 bootstrap__consul_encryption_key: '{{lookup("bitwarden", "consul", field="encryption-key")}}'
 bootstarp__consul_agent_acl_token: '{{lookup("bitwarden", "consul", field="agent-acl-token")}}'
+# Wireguard
+wireguard_consul_acl_token: '{{lookup("bitwarden", "consul", field="wireguard-acl-token")}}'
 
-# CloudFlare Origin certificates
+# CloudFlare
 origin_certs:
   - domain: 'status.im'
     crt: '{{lookup("bitwarden", "CloudFlare/status.im", file="origin.crt")}}'
