--- a/ansible/roles/uni-links-handler/tasks/consul.yml
+++ b/ansible/roles/uni-links-handler/tasks/consul.yml
@@ -1,6 +1,6 @@
 ---
 - name: Consul service definition
-  include_role: name=consul-service
+  include_role: name=infra-role-consul-service
   vars:
     consul_config_name: '{{ uni_links_cont_name }}'
     consul_services:
