ansible: add roles.py script to manage roles
https://github.com/status-im/infra-template/pull/5
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/ansible/bootstrap.yml
+++ b/ansible/bootstrap.yml
@@ -16,7 +16,7 @@
   run_once: true
   gather_facts: false
   tasks:
-    - local_action: command ./versioncheck.py
+    - local_action: command ./roles.py --check
       changed_when: false
 
 - name: Bootstrap Python support for Ansible
