--- a/ansible/group_vars/uni-links.yml
+++ b/ansible/group_vars/uni-links.yml
@@ -10,12 +10,11 @@ swap_file_size_mb: 1024
 nginx_metrics_listen_port: 9113
 
 # Open Nginx Ports
-open_ports_default_comment: 'Universal Links'
-open_ports_default_chain: 'SERVICES'
+open_ports_default_comment: 'Nginx'
 open_ports_list:
-  - { port: 80  }
-  - { port: 443 }
-  - { port: '{{ nginx_metrics_listen_port }}', comment: 'Nginx Metrics' }
+  nginx:
+    - { port: [ 80, 443 ] }
+    - { port: '{{ nginx_metrics_listen_port }}', ipset: 'proxy.misc', iifname: 'wg0' }
 
 # Nginx SSL Proxy configuration
 nginx_sites:
