flake: open nix flake devShell automatically with direnv (nix-direnv)
            see infra-templates:
              - 32a8552eaf0347c217fa7d80572b06d5cd90243d
              - a1b9500b5dcd114d45571e8122459f0e5aca9de2

Signed-off-by: Alexis Pentori <alexis@status.im>

--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,6 @@
-export VAULT_CACERT=./ansible/files/vault-ca.crt
-export VAULT_CLIENT_CERT=./ansible/files/vault-client-user.crt
-export VAULT_CLIENT_KEY=./ansible/files/vault-client-user.key
-export CONSUL_HTTP_TOKEN=$(pass services/consul/tokens/terraform)
+if ! has nix_direnv_version || ! nix_direnv_version 3.0.6; then
+  source_url "https://raw.githubusercontent.com/nix-community/nix-direnv/3.0.6/direnvrc" "sha256-RYcUJaRMf8oF5LznDrlCXbkOQrywm0HDv1VjYGaJGdM="
+fi
+
+source .envrc.secrets
+use flake
