--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,21 +1,23 @@
 ---
 # Root password
-bootstrap__root_pass: '{{lookup("bitwarden", "root-pass")}}'
+bootstrap__root_pass:               '{{lookup("vault", "hosts",            field="root-pass",       stage="all", env="all")}}'
 # Consul
-bootstrap__consul_encryption_key:   '{{lookup("bitwarden", "consul/cluster",    field="encryption-key")}}'
-bootstarp__consul_agent_acl_token:  '{{lookup("bitwarden", "consul/acl-tokens", field="agent-default")}}'
-bootstrap__consul_certs_ca_crt:     '{{lookup("bitwarden", "consul/certs",      file="ca.pem")}}'
-bootstrap__consul_certs_client_crt: '{{lookup("bitwarden", "consul/certs",      file="client.pem")}}'
-bootstrap__consul_certs_client_key: '{{lookup("bitwarden", "consul/certs",      file="client-key.pem")}}'
-# Migrated to NFTables from IPTables.
-# https://github.com/status-im/infra-misc/issues/301
-bootstrap__firewall_nftables: true
+bootstrap__consul_encryption_key:   '{{lookup("vault", "consul/config",     field="encryption-key", stage="all", env="all")}}'
+bootstarp__consul_agent_acl_token:  '{{lookup("vault", "consul/acl-tokens", field="agent-default",  stage="all", env="all")}}'
+bootstrap__consul_certs_ca_crt:     '{{lookup("vault", "consul/certs",      field="ca.pem",         stage="all", env="all")}}'
+bootstrap__consul_certs_client_crt: '{{lookup("vault", "consul/certs",      field="client.pem",     stage="all", env="all")}}'
+bootstrap__consul_certs_client_key: '{{lookup("vault", "consul/certs",      field="client-key.pem", stage="all", env="all")}}'
+# SSHGuard
+bootstrap__sshguard_whitelist_extra: ['{{lookup("vault", "sshguard/whitelist", field="jakubgs-home", stage="all", env="all")}}']
 # Wireguard
-wireguard_consul_acl_token: '{{lookup("bitwarden", "consul/acl-tokens", field="wireguard")}}'
+wireguard_consul_acl_token:          '{{lookup("vault", "consul/acl-tokens", field="wireguard", stage="all", env="all")}}'
+
+# Firewall
+bootstrap__firewall_nftables: true
 
 # CloudFlare
 origin_certs:
   - domain: 'status.im'
-    crt: '{{lookup("bitwarden", "CloudFlare/status.im", file="origin.crt")}}'
-    key: '{{lookup("bitwarden", "CloudFlare/status.im", file="origin.key")}}'
+    crt: '{{lookup("vault", "certs/cloudflare/status.im", field="origin.crt", env="all", stage="all")}}'
+    key: '{{lookup("vault", "certs/cloudflare/status.im", field="origin.key", env="all", stage="all")}}'
     default: true
