all: replace old naming of hq.metrics fleet
https://github.com/status-im/infra-hq/issues/158

Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/ansible/group_vars/uni-links.yml
+++ b/ansible/group_vars/uni-links.yml
@@ -14,7 +14,7 @@ open_ports_default_comment: 'Nginx'
 open_ports_list:
   nginx:
     - { port: [ 80, 443 ] }
-    - { port: '{{ nginx_metrics_listen_port }}', ipset: 'metrics.hq', iifname: 'wg0' }
+    - { port: '{{ nginx_metrics_listen_port }}', ipset: 'hq.metrics', iifname: 'wg0' }
 
 # Nginx SSL Proxy configuration
 nginx_sites:
