Makefile: sync with infra-template repo

--- a/.envrc.secrets
+++ b/.envrc.secrets
@@ -3,3 +3,7 @@ export VAULT_CLIENT_CERT=./ansible/files/vault-client-user.crt
 export VAULT_CLIENT_KEY=./ansible/files/vault-client-user.key
 export VAULT_ADDR=https://vault-api.infra.status.im:8200
 export CONSUL_HTTP_TOKEN=$(pass services/consul/tokens/terraform)
+# Provide a script in your PATH matching this name to load the token.
+if command -v vault_token_provider >/dev/null; then
+    export VAULT_TOKEN=$(vault_token_provider)
+fi
