--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -21,3 +21,8 @@ origin_certs:
     crt: '{{lookup("vault", "certs/cloudflare/status.im", field="origin.crt", env="all", stage="all")}}'
     key: '{{lookup("vault", "certs/cloudflare/status.im", field="origin.key", env="all", stage="all")}}'
     default: true
+
+# Vault certificate
+bootstrap__vault_ca_cert:           '{{ lookup(passwordstore, services/vault/certs/root-ca/cert returnall=true)}}'
+bootstrap__vault_client_cert:       '{{ lookup(passwordstore, services/vault/certs/client-host/cert returnall=true)}}'
+bootstrap__vault_client_key:        '{{ lookup(passwordstore, services/vault/certs/client-host/privkey returnall=true)}}'
