ansible: use admin as default remote user
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,7 @@
 [defaults]
 forks = 30
 timeout = 30
+remote_user = admin
 inventory = ./ansible/terraform.py
 callback_plugins = ./ansible/callback_plugins
 lookup_plugins = ./ansible/lookup_plugins
