--- a/ansible/group_vars/all.yml
+++ b/ansible/group_vars/all.yml
@@ -1,19 +1,24 @@
 ---
-# Root password
-bootstrap__root_pass:               '{{lookup("vault", "hosts",            field="root-pass",       stage="all", env="all")}}'
+# Passwords
+ansible_become_password:            '{{lookup("passwordstore", "hosts/admin-pass")}}'
+bootstrap__active_users_passwords:  '{{ bootstrap__active_users | get_user_passwords }}'
+bootstrap__admin_pass:              '{{lookup("vault", "users",             field="admin",              env="all", stage="all")}}'
+bootstrap__root_pass:               '{{lookup("vault", "users",             field="root",               env="all", stage="all")}}'
 # Consul
-bootstrap__consul_encryption_key:   '{{lookup("vault", "consul/config",     field="encryption-key", stage="all", env="all")}}'
-bootstarp__consul_agent_acl_token:  '{{lookup("vault", "consul/acl-tokens", field="agent-default",  stage="all", env="all")}}'
-bootstrap__consul_certs_ca_crt:     '{{lookup("vault", "consul/certs",      field="ca.pem",         stage="all", env="all")}}'
-bootstrap__consul_certs_client_crt: '{{lookup("vault", "consul/certs",      field="client.pem",     stage="all", env="all")}}'
-bootstrap__consul_certs_client_key: '{{lookup("vault", "consul/certs",      field="client-key.pem", stage="all", env="all")}}'
+bootstrap__consul_encryption_key:   '{{lookup("vault", "consul/config",     field="encryption-key",     env="all", stage="all")}}'
+bootstarp__consul_agent_acl_token:  '{{lookup("vault", "consul/acl-tokens", field="agent-default",      env="all", stage="all")}}'
+bootstrap__consul_certs_ca_crt:     '{{lookup("vault", "consul/certs",      field="ca.pem",             env="all", stage="all")}}'
+bootstrap__consul_certs_client_crt: '{{lookup("vault", "consul/certs",      field="client.pem",         env="all", stage="all")}}'
+bootstrap__consul_certs_client_key: '{{lookup("vault", "consul/certs",      field="client-key.pem",     env="all", stage="all")}}'
+# Vault certificate
+bootstrap__vault_ca_cert:           '{{ lookup("passwordstore", "services/vault/certs/root-ca/cert returnall=true")}}'
+bootstrap__vault_client_cert:       '{{ lookup("passwordstore", "services/vault/certs/client-host/cert returnall=true")}}'
+bootstrap__vault_client_key:        '{{ lookup("passwordstore", "services/vault/certs/client-host/privkey returnall=true")}}'
 # SSHGuard
-bootstrap__sshguard_whitelist_extra: ['{{lookup("vault", "sshguard/whitelist", field="jakubgs-home", stage="all", env="all")}}']
-# Wireguard
-wireguard_consul_acl_token:          '{{lookup("vault", "consul/acl-tokens", field="wireguard", stage="all", env="all")}}'
+bootstrap__sshguard_whitelist_extra: ['{{lookup("vault", "sshguard/whitelist",    field="jakubgs-home", env="all", stage="all")}}']
 
-# Firewall
-bootstrap__firewall_nftables: true
+# Wireguard
+wireguard_consul_acl_token:         '{{lookup("vault", "consul/acl-tokens", field="wireguard",          env="all", stage="all")}}'
 
 # CloudFlare
 origin_certs:
@@ -21,8 +26,3 @@ origin_certs:
     crt: '{{lookup("vault", "certs/cloudflare/status.im", field="origin.crt", env="all", stage="all")}}'
     key: '{{lookup("vault", "certs/cloudflare/status.im", field="origin.key", env="all", stage="all")}}'
     default: true
-
-# Vault certificate
-bootstrap__vault_ca_cert:           '{{ lookup("passwordstore", "services/vault/certs/root-ca/cert returnall=true")}}'
-bootstrap__vault_client_cert:       '{{ lookup("passwordstore", "services/vault/certs/client-host/cert returnall=true")}}'
-bootstrap__vault_client_key:        '{{ lookup("passwordstore", "services/vault/certs/client-host/privkey returnall=true")}}'
