ansible: add become_pass.sh, persistent connections
Signed-off-by: Jakub Sokołowski <jakub@status.im>

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,8 +5,10 @@ remote_user = admin
 inventory = ./ansible/terraform.py
 callback_plugins = ./ansible/callback_plugins
 lookup_plugins = ./ansible/lookup_plugins
+become_password_file = ./ansible/become_pass.sh
 module_name = shell
 host_key_checking = false
+use_persistent_connections = true
 # human-readable stdout/stderr results display
 stdout_callback = debug
 # Avoid default Python warnings
@@ -21,6 +23,9 @@ become_user = root
 [ssh_connection]
 # this should speed up exection but might cause issues with sudo
 pipelining = True
-control_path = /tmp/ansible-ssh-%%h-%%p-%%r
 # necessary for cloning private git repos
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o ForwardAgent=yes -o ConnectTimeout=360
+
+[persistent_connection]
+command_timeout = 60
+connect_retry_timeout = 30
