ansible: remove bitwarden plugin, upgrade ansible

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -12,7 +12,7 @@ use_persistent_connections = true
 # human-readable stdout/stderr results display
 stdout_callback = debug
 # Avoid default Python warnings
-interpreter_python = auto
+interpreter_python = auto_silent
 # https://github.com/ansible/ansible/issues/56930
 force_valid_group_names = ignore
 
